--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@types/react-redux": "^7.1.25",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
